--- a/research.Rmd
+++ b/research.Rmd
@@ -6,6 +6,12 @@ My research concerns how the abundance and interconnectedness of the digital med
 
 Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., & Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. https://doi.org/10.1093/jcmc/zmz009 
 
+Wells, C., Zhang, Y., Lukito, J. & Pevehouse, J. (2019). The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine. Mass Communication & Society. https://doi:10.1080/15205436.2019.1690664
+
+Chen, F., Zhang, Y. & Rohe, K. (forthcoming). Targeted sampling from massive Block- model graphs with personalized PageRank. Journal of the Royal Statistical Society.
+
+Lukito J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M-H., Xia, Y., Freelon, D., & Wells C. (forthcoming). Hacking the Message Amplification Cycle: How Russia Infiltrated American Political Journalism. International Journal of Press/Politics.
+
 Suk, J., Abhishek, A., Zhang, Y., Ahn, S.Y., Correa, T., Garlough, C. & Shah, D. (2019). #MeToo, Networked Acknowledgement, and Connective Action: How “Empowerment Through Empathy” Launched a Social Movement. Social Science Computer Review. https://doi.org/10.1177/0894439319864882 
 
 Xia, Y., Lukito, J., Zhang, Y., Wells, C., Kim, S., & Tong, C. (2019). Disinformation, performed: Self-presentation of a Russian IRA account on Twitter. Information, Communication and Society. https://doi.org/10.1080/1369118X.2019.1621921 
@@ -19,12 +25,6 @@ Zhang, Y., Wang, Y., Foley, J., Suk, J., & Conathan, D. (2017, July). Tweeting M
 **MANUSCRIPTS UNDER REVIEW & IN PREPARATION**
 
 Zhang, Y., Lukito J., Su, M-H., Suk, J., Xia, Y., Kim, S., Doroshenko, L., Song, W. & Wells, C. (submitted to Political Communication) Assembling Social Media Following through Polarized Publics and Media: How Russian IRA Accounts Gained Influence in the 2016 U.S. Election Cycle.
-
-Wells, C., Zhang, Y., Lukito, J. & Pevehouse, J. (R&R at Mass Communication & Society) The formation of attentive publics in the hybrid media system: How Donald Trump assembled his amplification machine.
-
-Chen, F., Zhang, Y. & Rohe, K. (R&R at Journal of the Royal Statistical Society) Targeted sampling from massive Blockmodel graphs with personalized PageRank.
-
-Lukito J., Suk, J., Zhang, Y., Doroshenko, L., Kim, S. J., Su, M-H., Xia, Y., Freelon, D., & Wells C. (R&R at International Journal of Press/Politics) Hacking the Message Amplification Cycle: How Russia Infiltrated American Political Journalism.
 
 Pelled, A., Lukito, J., Foley, J., Zhang, Y., Sun, Z., Vitolo-Haddad, C., Pevehouse, J., & Shah, D. (submitted to IJOC). Death across the news spectrum: A time series analysis of partisan coverage following mass shootings in the U.S. 
 
