--- a/research.Rmd
+++ b/research.Rmd
@@ -2,6 +2,8 @@
 
 My research concerns how the abundance and interconnectedness of the digital media system shape the shifting communication ecology. My current research program consists of three parts: 1) how actors drive attention toward and thus amplify a certain object; 2) how citizen expression on social media interacts with other parts of the media system; and 3) how computational techniques can be harnessed and developed to facilitate communication research. 
 
+Here's a link to [my Google Scholar](https://scholar.google.com/citations?user=OQqFZoEAAAAJ&hl=en).
+
 **PUBLICATIONS**
 
 Zhang, Y., Shah, D., Foley, J., Abhishek, A., Lukito, J., Suk, J., Kim, S., Sun, Z., Pevehouse, J., & Garlough, C. (2019). Whose Lives Matter? Mass Shootings and Social Media Discourses of Sympathy and Policy, 2012-2014. Journal of Computer-Mediated Communication. https://doi.org/10.1093/jcmc/zmz009 
