--- a/contact.Rmd
+++ b/contact.Rmd
@@ -1,1 +1,1 @@
-You can reach me via either zhang525@wisc.edu or yinizhang2011@gmail.com.
+You can reach me via either yzhang20@buffalo.edu or yinizhang2011@gmail.com.
