--- a/index.Rmd
+++ b/index.Rmd
@@ -14,5 +14,5 @@ Apart from doing research, I like hiking and traveling around the states, doing 
 
 **My dissertation won an award :) A summary is available [here](files/A Network Approach Summary.pdf).**
 
-**My full CV is available [here](files/Yini_Zhang_CV_202107.pdf).**
+**My full CV is available [here](files/Yini_CV_Jan_2022.pdf).**
 
