--- a/index.Rmd
+++ b/index.Rmd
@@ -2,17 +2,17 @@
 
 <img src="images/YiniZhang.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left">
 
-I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo. I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin Madison](https://journalism.wisc.edu). My research concerns the processes and consequences of communication in the hybrid media system. Specifically, I apply computational methods to the study of networked actors on social media, information flow across traditional and social media, and their implications for journalism and democracy. I have written academic articles about the assemblage of social media following, social media amplification of a certain object, social media response to contentious topics, social media public opinion, hostile media perception in social media news consumption, and fact-check effects. The topical areas of those articles range from gun laws and mass shootings, immigration, the #MeToo movement, Donald Trump's social media following, to the Russian disinformation campaign. 
+I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo. I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin Madison](https://journalism.wisc.edu). My research concerns the processes and consequences of communication in the hybrid media system. Specifically, I apply computational methods to the study of networked actors on social media, information flow across traditional and social media, and their implications for journalism and democracy. I have written academic articles about the assemblage of social media following, social media amplification of a certain object, social media response to contentious issues and events, and social media public opinion. The topical areas of those articles range from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media following, to the Russian disinformation campaign. 
 
-The methods I use in my research are mostly computational, though I am also conversant with survey and experimental methods. I am able to independently collect large Twitter datasets through its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from other disciplines to facilitate communication research. 
+The methods I use in my research are primarily computational, though I am also conversant with survey and experimental methods. For research, I usually collect large Twitter datasets through its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from other disciplines to facilitate communication research. 
 
 R is my primary programming language for research. I'm also familiar with Hadoop, Java, SPSS and Python.
 
-Books that have greatly influenced me in my formative years at SJMC include John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system) and James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention).
+Books that have greatly influenced me in my formative years at SJMC include John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system), James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention), Nick Couldry's [Media, Society, World: Social Theory and Digital Media Practice](https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208), and Paul Starr's [The Creation of the Media: Political Origins of Modern Communications](https://www.princeton.edu/~starr/CreationoftheMedia/Media.html). Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts's [Network Propaganda: Manipulation, Disinformation, and Radicalization in American Politics](https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624), Jaime Settle's [Frenemies: How Social Media Polarizes America](https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&isbn=9781108472531), and Chris Bail's [Breaking the Social Media Prism: How to Make Our Platforms Less Polarizing](https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism). If you happen to be fascinated by any one of those books, I'd be delighted to have a chat with you about it.
 
-Apart from doing research, I like hiking and traveling around the states, doing Zumba, cooking comfort food, and watching talks shows, movies and TV series. The incomplete list of my favorite TV series includes Westworld, Silicon Valley, Games of Thrones, True Detective, Fargo, and many more. I used to be a big fan of classical and rock music, but as I age I find myself gravitating toward podcasts, something I enjoy listening during my daily commute. 
+Apart from doing research, I like playing with my little one, hiking, traveling, doing Zumba, cooking comfort food, and watching talk shows, movies and TV series. I used to be a big fan of classical and rock music, but as I grow older I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
 
 **My dissertation won an award :) A summary is available [here](files/A Network Approach Summary.pdf).**
 
-**My full CV is available [here](files/Yini_CV_Jan_2022.pdf).**
+**My full CV is available [here](files/Yini_CV_202207.pdf).**
 
