--- a/index.Rmd
+++ b/index.Rmd
@@ -10,15 +10,15 @@ I study the processes and consequences of communication in the hybrid media syst
 
 I have written academic articles about how social media actors assemble their followings, how social media amplify obscure actors and extremist groups, and how to measure social media public opinion. The topics of those articles range from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media following, QAnon, to the Russian IRA disinformation campaign. Here's a link to [my Google Scholar](https://scholar.google.com/citations?user=OQqFZoEAAAAJ&hl=en).
 
-The methods I use in my research are primarily computational, though I am also conversant with survey and experimental methods. For my research, I usually collect Twitter data via its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Recently, I have moved beyond Twitter to include other platforms in my research, like Facebook, YouTube, and Reddit. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. R is my primary programming language for research. I have also used SPSS, Hadoop, Java, and Python in the past.
+The methods I use in my research are primarily computational, though I am also conversant with survey and experimental methods. For my research, I usually collect Twitter data via its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Recently, I have moved beyond Twitter to include other platforms in my research, like Facebook, YouTube, and Reddit. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. R is my primary programming language. I have a working knowledge of SPSS, Hadoop, Java, and Python.
 
-There are a few books that have greatly influenced me during my formative years at SJMC. I'd love to share them with you in case you might be interested: John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Paul Starr's [The Creation of the Media: Political Origins of Modern Communications](https://www.princeton.edu/~starr/CreationoftheMedia/Media.html), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system), James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention), and Nick Couldry's [Media, Society, World: Social Theory and Digital Media Practice](https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208). Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts's [Network Propaganda: Manipulation, Disinformation, and Radicalization in American Politics](https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624), Jaime Settle's [Frenemies: How Social Media Polarizes America](https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&isbn=9781108472531), and Chris Bail's [Breaking the Social Media Prism: How to Make Our Platforms Less Polarizing](https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism). If you happen to be fascinated by any one of these books, I'd be delighted to have a chat with you about it.
+A few books have greatly shaped my research during my formative years at SJMC. I'd love to share them with you in case you might be interested: John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Paul Starr's [The Creation of the Media: Political Origins of Modern Communications](https://www.princeton.edu/~starr/CreationoftheMedia/Media.html), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system), James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention), and Nick Couldry's [Media, Society, World: Social Theory and Digital Media Practice](https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208). Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts's [Network Propaganda: Manipulation, Disinformation, and Radicalization in American Politics](https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624), Jaime Settle's [Frenemies: How Social Media Polarizes America](https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&isbn=9781108472531), and Chris Bail's [Breaking the Social Media Prism: How to Make Our Platforms Less Polarizing](https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism). If you happen to be fascinated by any one of these books, I'd be delighted to have a chat with you about it.
 
-Apart from doing research, I like playing with my little one (and his friends), hiking, traveling, doing Zumba, cooking comfort food, and watching talk shows, movies and TV series. I used to be a big fan of classical and rock music, but as I grow older I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
+Apart from doing research, I like playing with my little one (and his friends), hiking, traveling, doing Zumba, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as I grow older I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
 
 **My dissertation won an award :) A summary is available [here](files/A Network Approach Summary.pdf).**
 
-**I co-founded the CEM (Communication and Emerging Media) lab with my colleagues. We have been doing really cool research in the basement of Baldy and on Zoom. Check out our lab website [here](https://cemlab.github.io/).**
+**I co-founded the Communication and Emerging Media (CEM) lab with my colleagues. We have been doing cool research in the basement of Baldy and on Zoom. Check out our lab website [here](https://cemlab.github.io/).**
 
 **My full CV is available [here](files/Yini_CV_082022.pdf).**
 
