--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="styles.css" type="text/css">
 
-<img src="images/YiniZhang.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left">
+<img src="images/YZ22.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left">
 
 **Hi there! Welcome to this tiny corner of mine on the boundless internet!** 
 
@@ -20,5 +20,5 @@ Apart from doing research, I like playing with my little one (and his friends), 
 
 **I co-founded the Communication and Emerging Media (CEM) lab with my colleagues. We have been doing cool research in the basement of Baldy and on Zoom. Check out our lab website [here](https://cemlab.github.io/).**
 
-**My full CV is available [here](files/Yini_CV_092022.pdf).**
+**My full CV is available [here](files/Yini_CV_102022.pdf).**
 
